// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
Object {
  "build": "16",
  "ci": "14",
  "coverage": "21",
  "dev": "24",
  "install": "18",
  "lerna": "11",
  "link": "15",
  "lint": "20",
  "npm": "13",
  "pack": "6",
  "postpack": "5",
  "postpublish": "3",
  "postpublishOnly": "2",
  "prepack": "7",
  "prepare": "9",
  "prepublish": "10",
  "prepublishOnly": "8",
  "publish": "4",
  "restart": "23",
  "shrinkwrap": "1",
  "start": "25",
  "stop": "22",
  "test": "19",
  "uninstall": "17",
  "version": "0",
  "yarn": "12",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  \\"start\\": \\"25\\",
  \\"dev\\": \\"24\\",
  \\"restart\\": \\"23\\",
  \\"stop\\": \\"22\\",
  \\"coverage\\": \\"21\\",
  \\"lint\\": \\"20\\",
  \\"test\\": \\"19\\",
  \\"install\\": \\"18\\",
  \\"uninstall\\": \\"17\\",
  \\"build\\": \\"16\\",
  \\"link\\": \\"15\\",
  \\"ci\\": \\"14\\",
  \\"npm\\": \\"13\\",
  \\"yarn\\": \\"12\\",
  \\"lerna\\": \\"11\\",
  \\"prepublish\\": \\"10\\",
  \\"prepare\\": \\"9\\",
  \\"prepublishOnly\\": \\"8\\",
  \\"prepack\\": \\"7\\",
  \\"pack\\": \\"6\\",
  \\"postpack\\": \\"5\\",
  \\"publish\\": \\"4\\",
  \\"postpublish\\": \\"3\\",
  \\"postpublishOnly\\": \\"2\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"version\\": \\"0\\"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
Object {
  "build": "9",
  "ci": "11",
  "coverage": "4",
  "dev": "1",
  "install": "7",
  "lerna": "14",
  "link": "10",
  "lint": "5",
  "npm": "12",
  "pack": "19",
  "postpack": "20",
  "postpublish": "22",
  "postpublishOnly": "23",
  "prepack": "18",
  "prepare": "16",
  "prepublish": "15",
  "prepublishOnly": "17",
  "publish": "21",
  "restart": "2",
  "shrinkwrap": "24",
  "start": "0",
  "stop": "3",
  "test": "6",
  "uninstall": "8",
  "version": "25",
  "yarn": "13",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  \\"start\\": \\"0\\",
  \\"dev\\": \\"1\\",
  \\"restart\\": \\"2\\",
  \\"stop\\": \\"3\\",
  \\"coverage\\": \\"4\\",
  \\"lint\\": \\"5\\",
  \\"test\\": \\"6\\",
  \\"install\\": \\"7\\",
  \\"uninstall\\": \\"8\\",
  \\"build\\": \\"9\\",
  \\"link\\": \\"10\\",
  \\"ci\\": \\"11\\",
  \\"npm\\": \\"12\\",
  \\"yarn\\": \\"13\\",
  \\"lerna\\": \\"14\\",
  \\"prepublish\\": \\"15\\",
  \\"prepare\\": \\"16\\",
  \\"prepublishOnly\\": \\"17\\",
  \\"prepack\\": \\"18\\",
  \\"pack\\": \\"19\\",
  \\"postpack\\": \\"20\\",
  \\"publish\\": \\"21\\",
  \\"postpublish\\": \\"22\\",
  \\"postpublishOnly\\": \\"23\\",
  \\"shrinkwrap\\": \\"24\\",
  \\"version\\": \\"25\\"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
Object {
  "build": "16",
  "ci": "14",
  "coverage": "21",
  "dev": "24",
  "install": "18",
  "lerna": "11",
  "link": "15",
  "lint": "20",
  "npm": "13",
  "pack": "6",
  "postbuild": "16",
  "postci": "14",
  "postcoverage": "21",
  "postdev": "24",
  "postinstall": "18",
  "postlerna": "11",
  "postlink": "15",
  "postlint": "20",
  "postnpm": "13",
  "postpack": "6",
  "postprepack": "7",
  "postprepare": "9",
  "postprepublish": "10",
  "postprepublishOnly": "8",
  "postpublish": "4",
  "postpublishOnly": "2",
  "postrestart": "23",
  "postshrinkwrap": "1",
  "poststart": "25",
  "poststop": "22",
  "posttest": "19",
  "postuninstall": "17",
  "postversion": "0",
  "postyarn": "12",
  "prebuild": "16",
  "preci": "14",
  "precoverage": "21",
  "predev": "24",
  "preinstall": "18",
  "prelerna": "11",
  "prelink": "15",
  "prelint": "20",
  "prenpm": "13",
  "prepack": "7",
  "prepare": "9",
  "prepostpack": "5",
  "prepostpublish": "3",
  "prepostpublishOnly": "2",
  "prepublish": "10",
  "prepublishOnly": "8",
  "prerestart": "23",
  "preshrinkwrap": "1",
  "prestart": "25",
  "prestop": "22",
  "pretest": "19",
  "preuninstall": "17",
  "preversion": "0",
  "preyarn": "12",
  "publish": "4",
  "restart": "23",
  "shrinkwrap": "1",
  "start": "25",
  "stop": "22",
  "test": "19",
  "uninstall": "17",
  "version": "0",
  "yarn": "12",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  \\"prestart\\": \\"25\\",
  \\"start\\": \\"25\\",
  \\"poststart\\": \\"25\\",
  \\"predev\\": \\"24\\",
  \\"dev\\": \\"24\\",
  \\"postdev\\": \\"24\\",
  \\"prerestart\\": \\"23\\",
  \\"restart\\": \\"23\\",
  \\"postrestart\\": \\"23\\",
  \\"prestop\\": \\"22\\",
  \\"stop\\": \\"22\\",
  \\"poststop\\": \\"22\\",
  \\"precoverage\\": \\"21\\",
  \\"coverage\\": \\"21\\",
  \\"postcoverage\\": \\"21\\",
  \\"prelint\\": \\"20\\",
  \\"lint\\": \\"20\\",
  \\"postlint\\": \\"20\\",
  \\"pretest\\": \\"19\\",
  \\"test\\": \\"19\\",
  \\"posttest\\": \\"19\\",
  \\"preinstall\\": \\"18\\",
  \\"install\\": \\"18\\",
  \\"postinstall\\": \\"18\\",
  \\"preuninstall\\": \\"17\\",
  \\"uninstall\\": \\"17\\",
  \\"postuninstall\\": \\"17\\",
  \\"prebuild\\": \\"16\\",
  \\"build\\": \\"16\\",
  \\"postbuild\\": \\"16\\",
  \\"prelink\\": \\"15\\",
  \\"link\\": \\"15\\",
  \\"postlink\\": \\"15\\",
  \\"preci\\": \\"14\\",
  \\"ci\\": \\"14\\",
  \\"postci\\": \\"14\\",
  \\"prenpm\\": \\"13\\",
  \\"npm\\": \\"13\\",
  \\"postnpm\\": \\"13\\",
  \\"preyarn\\": \\"12\\",
  \\"yarn\\": \\"12\\",
  \\"postyarn\\": \\"12\\",
  \\"prelerna\\": \\"11\\",
  \\"lerna\\": \\"11\\",
  \\"postlerna\\": \\"11\\",
  \\"prepublish\\": \\"10\\",
  \\"postprepublish\\": \\"10\\",
  \\"prepare\\": \\"9\\",
  \\"postprepare\\": \\"9\\",
  \\"prepublishOnly\\": \\"8\\",
  \\"postprepublishOnly\\": \\"8\\",
  \\"prepack\\": \\"7\\",
  \\"postprepack\\": \\"7\\",
  \\"pack\\": \\"6\\",
  \\"postpack\\": \\"6\\",
  \\"prepostpack\\": \\"5\\",
  \\"publish\\": \\"4\\",
  \\"postpublish\\": \\"4\\",
  \\"prepostpublish\\": \\"3\\",
  \\"prepostpublishOnly\\": \\"2\\",
  \\"postpublishOnly\\": \\"2\\",
  \\"preshrinkwrap\\": \\"1\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"postshrinkwrap\\": \\"1\\",
  \\"preversion\\": \\"0\\",
  \\"version\\": \\"0\\",
  \\"postversion\\": \\"0\\"
}"
`;

exports[`should script lifecycle 1`] = `
Object {
  "_myscript": "echo _myscript",
  "_myscript_": "echo _myscript_",
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dev": "echo dev",
  "install": "echo install",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "myscript": "echo myscript",
  "myscript:abc": "echo myscript:abc",
  "myscript_": "echo myscript_",
  "npm": "echo npm",
  "pack": "echo pack",
  "pare": "echo pare",
  "post_myscript": "echo post_myscript",
  "post_myscript_": "echo post_myscript_",
  "postbuild": "echo postbuild",
  "postci": "echo postci",
  "postcoverage": "echo postcoverage",
  "postdev": "echo postdev",
  "postinstall": "echo postinstall",
  "postlerna": "echo postlerna",
  "postlink": "echo postlink",
  "postlint": "echo postlint",
  "postmyscript": "echo postmyscript",
  "postmyscript:abc": "echo postmyscript:abc",
  "postmyscript_": "echo postmyscript_",
  "postnpm": "echo postnpm",
  "postpack": "echo postpack",
  "postpare": "echo postpare",
  "postpostpack": "echo postpostpack",
  "postpostpublish": "echo postpostpublish",
  "postpostpublishOnly": "echo postpostpublishOnly",
  "postprepack": "echo postprepack",
  "postprepare": "echo postprepare",
  "postprepublish": "echo postprepublish",
  "postprepublishOnly": "echo postprepublishOnly",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postrestart": "echo postrestart",
  "postshrinkwrap": "echo postshrinkwrap",
  "poststart": "echo poststart",
  "poststop": "echo poststop",
  "posttest": "echo posttest",
  "postuninstall": "echo postuninstall",
  "postversion": "echo postversion",
  "postyarn": "echo postyarn",
  "pre_myscript": "echo pre_myscript",
  "pre_myscript_": "echo pre_myscript_",
  "prebuild": "echo prebuild",
  "preci": "echo preci",
  "precoverage": "echo precoverage",
  "predev": "echo predev",
  "preinstall": "echo preinstall",
  "prelerna": "echo prelerna",
  "prelink": "echo prelink",
  "prelint": "echo prelint",
  "premyscript": "echo premyscript",
  "premyscript:abc": "echo premyscript:abc",
  "premyscript_": "echo premyscript_",
  "prenpm": "echo prenpm",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepostpack": "echo prepostpack",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "preprepack": "echo preprepack",
  "preprepare": "echo preprepare",
  "preprepublish": "echo preprepublish",
  "preprepublishOnly": "echo preprepublishOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerestart": "echo prerestart",
  "preshrinkwrap": "echo preshrinkwrap",
  "prestart": "echo prestart",
  "prestop": "echo prestop",
  "pretest": "echo pretest",
  "preuninstall": "echo preuninstall",
  "preversion": "echo preversion",
  "preyarn": "echo preyarn",
  "publish": "echo publish",
  "publishOnly": "echo publishOnly",
  "restart": "echo restart",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "version": "echo version",
  "yarn": "echo yarn",
}
`;

exports[`should script lifecycle 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "preprepublish",
  "prepublish",
  "postprepublish",
  "preprepare",
  "prepare",
  "postprepare",
  "preprepublishOnly",
  "prepublishOnly",
  "postprepublishOnly",
  "preprepack",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "postpostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "postpostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "postpostpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
  "premyscript",
  "premyscript_",
  "premyscript:abc",
  "myscript",
  "myscript_",
  "_myscript",
  "_myscript_",
  "myscript:abc",
  "postmyscript",
  "postmyscript_",
  "postmyscript:abc",
  "pare",
  "postpare",
  "pre_myscript",
  "pre_myscript_",
  "post_myscript",
  "post_myscript_",
  "publishOnly",
]
`;

exports[`should script lifecycle 3`] = `
"{
  \\"prestart\\": \\"echo prestart\\",
  \\"start\\": \\"echo start\\",
  \\"poststart\\": \\"echo poststart\\",
  \\"predev\\": \\"echo predev\\",
  \\"dev\\": \\"echo dev\\",
  \\"postdev\\": \\"echo postdev\\",
  \\"prerestart\\": \\"echo prerestart\\",
  \\"restart\\": \\"echo restart\\",
  \\"postrestart\\": \\"echo postrestart\\",
  \\"prestop\\": \\"echo prestop\\",
  \\"stop\\": \\"echo stop\\",
  \\"poststop\\": \\"echo poststop\\",
  \\"precoverage\\": \\"echo precoverage\\",
  \\"coverage\\": \\"echo coverage\\",
  \\"postcoverage\\": \\"echo postcoverage\\",
  \\"prelint\\": \\"echo prelint\\",
  \\"lint\\": \\"echo lint\\",
  \\"postlint\\": \\"echo postlint\\",
  \\"pretest\\": \\"echo pretest\\",
  \\"test\\": \\"echo test\\",
  \\"posttest\\": \\"echo posttest\\",
  \\"preinstall\\": \\"echo preinstall\\",
  \\"install\\": \\"echo install\\",
  \\"postinstall\\": \\"echo postinstall\\",
  \\"preuninstall\\": \\"echo preuninstall\\",
  \\"uninstall\\": \\"echo uninstall\\",
  \\"postuninstall\\": \\"echo postuninstall\\",
  \\"prebuild\\": \\"echo prebuild\\",
  \\"build\\": \\"echo build\\",
  \\"postbuild\\": \\"echo postbuild\\",
  \\"prelink\\": \\"echo prelink\\",
  \\"link\\": \\"echo link\\",
  \\"postlink\\": \\"echo postlink\\",
  \\"preci\\": \\"echo preci\\",
  \\"ci\\": \\"echo ci\\",
  \\"postci\\": \\"echo postci\\",
  \\"prenpm\\": \\"echo prenpm\\",
  \\"npm\\": \\"echo npm\\",
  \\"postnpm\\": \\"echo postnpm\\",
  \\"preyarn\\": \\"echo preyarn\\",
  \\"yarn\\": \\"echo yarn\\",
  \\"postyarn\\": \\"echo postyarn\\",
  \\"prelerna\\": \\"echo prelerna\\",
  \\"lerna\\": \\"echo lerna\\",
  \\"postlerna\\": \\"echo postlerna\\",
  \\"preprepublish\\": \\"echo preprepublish\\",
  \\"prepublish\\": \\"echo prepublish\\",
  \\"postprepublish\\": \\"echo postprepublish\\",
  \\"preprepare\\": \\"echo preprepare\\",
  \\"prepare\\": \\"echo prepare\\",
  \\"postprepare\\": \\"echo postprepare\\",
  \\"preprepublishOnly\\": \\"echo preprepublishOnly\\",
  \\"prepublishOnly\\": \\"echo prepublishOnly\\",
  \\"postprepublishOnly\\": \\"echo postprepublishOnly\\",
  \\"preprepack\\": \\"echo preprepack\\",
  \\"prepack\\": \\"echo prepack\\",
  \\"postprepack\\": \\"echo postprepack\\",
  \\"pack\\": \\"echo pack\\",
  \\"postpack\\": \\"echo postpack\\",
  \\"prepostpack\\": \\"echo prepostpack\\",
  \\"postpostpack\\": \\"echo postpostpack\\",
  \\"publish\\": \\"echo publish\\",
  \\"postpublish\\": \\"echo postpublish\\",
  \\"prepostpublish\\": \\"echo prepostpublish\\",
  \\"postpostpublish\\": \\"echo postpostpublish\\",
  \\"prepostpublishOnly\\": \\"echo prepostpublishOnly\\",
  \\"postpublishOnly\\": \\"echo postpublishOnly\\",
  \\"postpostpublishOnly\\": \\"echo postpostpublishOnly\\",
  \\"preshrinkwrap\\": \\"echo preshrinkwrap\\",
  \\"shrinkwrap\\": \\"echo shrinkwrap\\",
  \\"postshrinkwrap\\": \\"echo postshrinkwrap\\",
  \\"preversion\\": \\"echo preversion\\",
  \\"version\\": \\"echo version\\",
  \\"postversion\\": \\"echo postversion\\",
  \\"premyscript\\": \\"echo premyscript\\",
  \\"premyscript_\\": \\"echo premyscript_\\",
  \\"premyscript:abc\\": \\"echo premyscript:abc\\",
  \\"myscript\\": \\"echo myscript\\",
  \\"myscript_\\": \\"echo myscript_\\",
  \\"_myscript\\": \\"echo _myscript\\",
  \\"_myscript_\\": \\"echo _myscript_\\",
  \\"myscript:abc\\": \\"echo myscript:abc\\",
  \\"postmyscript\\": \\"echo postmyscript\\",
  \\"postmyscript_\\": \\"echo postmyscript_\\",
  \\"postmyscript:abc\\": \\"echo postmyscript:abc\\",
  \\"pare\\": \\"echo pare\\",
  \\"postpare\\": \\"echo postpare\\",
  \\"pre_myscript\\": \\"echo pre_myscript\\",
  \\"pre_myscript_\\": \\"echo pre_myscript_\\",
  \\"post_myscript\\": \\"echo post_myscript\\",
  \\"post_myscript_\\": \\"echo post_myscript_\\",
  \\"publishOnly\\": \\"echo publishOnly\\"
}"
`;

exports[`sort base 1`] = `
Object {
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "postprettier": "echo \\"so pretty\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"preprettier\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort base v2 1`] = `
Object {
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"preprettier_\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier_\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"_postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
Object {
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
Array [
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"prepublishOnly_\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
Object {
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
Array [
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test-\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"_prepublishOnly:\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"_postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;
